--- a/Data prep and EDA/data_cleaning.ipynb
+++ b/Data prep and EDA/data_cleaning.ipynb
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "a0329498",
    "metadata": {},
    "outputs": [
@@ -573,120 +573,10 @@
       "$BXLT: possibly delisted; no price data found  (1d 2012-01-01 00:00:00 -> 2021-01-01 00:00:00)\n",
       "$CA: possibly delisted; no price data found  (1d 2012-01-01 00:00:00 -> 2021-01-01 00:00:00) (Yahoo error = \"Data doesn't exist for startDate = 1325394000, endDate = 1609477200\")\n",
       "$CAM: possibly delisted; no price data found  (1d 2012-01-01 00:00:00 -> 2021-01-01 00:00:00) (Yahoo error = \"Data doesn't exist for startDate = 1325394000, endDate = 1609477200\")\n",
-      "$CBS: possibly delisted; no timezone found\n",
-      "$CELG: possibly delisted; no timezone found\n",
-      "$CERN: possibly delisted; no timezone found\n",
-      "$CFN: possibly delisted; no price data found  (1d 2012-01-01 00:00:00 -> 2021-01-01 00:00:00)\n",
-      "$CMCSK: possibly delisted; no price data found  (1d 2012-01-01 00:00:00 -> 2021-01-01 00:00:00)\n",
-      "$COG: possibly delisted; no timezone found\n",
-      "$CPGX: possibly delisted; no price data found  (1d 2012-01-01 00:00:00 -> 2021-01-01 00:00:00)\n",
-      "$CTL: possibly delisted; no timezone found\n",
-      "$CTLT: possibly delisted; no timezone found\n",
-      "$CTXS: possibly delisted; no timezone found\n",
-      "$CVC: possibly delisted; no price data found  (1d 2012-01-01 00:00:00 -> 2021-01-01 00:00:00)\n",
-      "$CXO: possibly delisted; no timezone found\n",
-      "$DF: possibly delisted; no timezone found\n",
-      "$DFS: possibly delisted; no timezone found\n",
-      "$DISCA: possibly delisted; no timezone found\n",
-      "$DISCK: possibly delisted; no timezone found\n",
-      "$DISH: possibly delisted; no timezone found\n",
-      "$DNR: possibly delisted; no timezone found\n",
-      "$DRE: possibly delisted; no timezone found\n",
-      "$DWDP: possibly delisted; no timezone found\n",
-      "$ENDP: possibly delisted; no timezone found\n",
-      "$ESV: possibly delisted; no timezone found\n",
-      "$ETFC: possibly delisted; no timezone found\n",
-      "$FBHS: possibly delisted; no timezone found\n",
-      "$FDO: possibly delisted; no price data found  (1d 2012-01-01 00:00:00 -> 2021-01-01 00:00:00)\n",
-      "$FII: possibly delisted; no timezone found\n",
-      "$FISV: possibly delisted; no timezone found\n",
-      "$FLIR: possibly delisted; no timezone found\n",
-      "$FLT: possibly delisted; no timezone found\n",
-      "$FRC: possibly delisted; no timezone found\n",
-      "$FRX: possibly delisted; no timezone found\n",
-      "$FTR: possibly delisted; no timezone found\n",
-      "$GGP: possibly delisted; no price data found  (1d 2012-01-01 00:00:00 -> 2021-01-01 00:00:00)\n",
-      "$GMCR: possibly delisted; no price data found  (1d 2012-01-01 00:00:00 -> 2021-01-01 00:00:00)\n",
-      "$GPS: possibly delisted; no timezone found\n",
-      "$HCBK: possibly delisted; no price data found  (1d 2012-01-01 00:00:00 -> 2021-01-01 00:00:00)\n",
-      "$HES: possibly delisted; no timezone found\n",
-      "$HFC: possibly delisted; no timezone found\n",
-      "$HRS: possibly delisted; no timezone found\n",
-      "$HSP: possibly delisted; no price data found  (1d 2012-01-01 00:00:00 -> 2021-01-01 00:00:00)\n",
-      "$IGT: possibly delisted; no timezone found\n",
-      "$INFO: possibly delisted; no price data found  (1d 2012-01-01 00:00:00 -> 2021-01-01 00:00:00) (Yahoo error = \"Data doesn't exist for startDate = 1325394000, endDate = 1609477200\")\n",
-      "$JCP: possibly delisted; no timezone found\n",
-      "$JEC: possibly delisted; no timezone found\n",
-      "$JNPR: possibly delisted; no timezone found\n",
-      "$JOY: possibly delisted; no price data found  (1d 2012-01-01 00:00:00 -> 2021-01-01 00:00:00)\n",
-      "$JWN: possibly delisted; no timezone found\n",
-      "$KORS: possibly delisted; no price data found  (1d 2012-01-01 00:00:00 -> 2021-01-01 00:00:00)\n",
-      "$KRFT: possibly delisted; no price data found  (1d 2012-01-01 00:00:00 -> 2021-01-01 00:00:00)\n",
-      "$KSU: possibly delisted; no timezone found\n",
-      "$LB: possibly delisted; no price data found  (1d 2012-01-01 00:00:00 -> 2021-01-01 00:00:00) (Yahoo error = \"Data doesn't exist for startDate = 1325394000, endDate = 1609477200\")\n",
-      "$LLTC: possibly delisted; no price data found  (1d 2012-01-01 00:00:00 -> 2021-01-01 00:00:00)\n",
-      "$LM: possibly delisted; no timezone found\n",
-      "$LO: possibly delisted; no price data found  (1d 2012-01-01 00:00:00 -> 2021-01-01 00:00:00)\n",
-      "$LSI: possibly delisted; no timezone found\n",
-      "$LVLT: possibly delisted; no price data found  (1d 2012-01-01 00:00:00 -> 2021-01-01 00:00:00)\n",
-      "$LXK: possibly delisted; no price data found  (1d 2012-01-01 00:00:00 -> 2021-01-01 00:00:00)\n",
-      "$MJN: possibly delisted; no price data found  (1d 2012-01-01 00:00:00 -> 2021-01-01 00:00:00)\n",
-      "$MRO: possibly delisted; no timezone found\n",
-      "$MWV: possibly delisted; no price data found  (1d 2012-01-01 00:00:00 -> 2021-01-01 00:00:00)\n",
-      "$MXIM: possibly delisted; no timezone found\n",
-      "$MYL: possibly delisted; no timezone found\n",
-      "$NBL: possibly delisted; no timezone found\n",
-      "$NLOK: possibly delisted; no timezone found\n",
-      "$NLSN: possibly delisted; no timezone found\n",
-      "$NYX: possibly delisted; no price data found  (1d 2012-01-01 00:00:00 -> 2021-01-01 00:00:00)\n",
-      "$PBCT: possibly delisted; no timezone found\n",
-      "$PDCO: possibly delisted; no timezone found\n",
-      "$PEAK: possibly delisted; no timezone found\n",
-      "$PKI: possibly delisted; no timezone found\n",
-      "$PXD: possibly delisted; no timezone found\n",
-      "$QEP: possibly delisted; no timezone found\n",
-      "$RAI: possibly delisted; no price data found  (1d 2012-01-01 00:00:00 -> 2021-01-01 00:00:00)\n",
-      "$RDC: possibly delisted; no timezone found\n",
-      "$RE: possibly delisted; no timezone found\n",
-      "$RHT: possibly delisted; no timezone found\n",
-      "$RRD: possibly delisted; no timezone found\n",
-      "$RTN: possibly delisted; no timezone found\n",
-      "$SIAL: possibly delisted; no price data found  (1d 2012-01-01 00:00:00 -> 2021-01-01 00:00:00)\n",
-      "$SIVB: possibly delisted; no timezone found\n",
-      "$SNDK: possibly delisted; no price data found  (1d 2012-01-01 00:00:00 -> 2021-01-01 00:00:00) (Yahoo error = \"Data doesn't exist for startDate = 1325394000, endDate = 1609477200\")\n",
-      "$SNI: possibly delisted; no price data found  (1d 2012-01-01 00:00:00 -> 2021-01-01 00:00:00)\n",
-      "$SPLS: possibly delisted; no price data found  (1d 2012-01-01 00:00:00 -> 2021-01-01 00:00:00)\n",
-      "$SRCL: possibly delisted; no timezone found\n",
-      "$STI: possibly delisted; no price data found  (1d 2012-01-01 00:00:00 -> 2021-01-01 00:00:00) (Yahoo error = \"Data doesn't exist for startDate = 1325394000, endDate = 1609477200\")\n",
-      "$STJ: possibly delisted; no price data found  (1d 2012-01-01 00:00:00 -> 2021-01-01 00:00:00)\n",
-      "$SWN: possibly delisted; no timezone found\n",
-      "$SWY: possibly delisted; no price data found  (1d 2012-01-01 00:00:00 -> 2021-01-01 00:00:00)\n",
-      "$SYMC: possibly delisted; no timezone found\n",
-      "$TIF: possibly delisted; no timezone found\n",
-      "$TMK: possibly delisted; no timezone found\n",
-      "$TSS: possibly delisted; no timezone found\n",
-      "$TWC: possibly delisted; no price data found  (1d 2012-01-01 00:00:00 -> 2021-01-01 00:00:00)\n",
-      "$TWTR: possibly delisted; no timezone found\n",
-      "$UTX: possibly delisted; no timezone found\n",
-      "$VAR: possibly delisted; no timezone found\n",
-      "$VIAB: possibly delisted; no timezone found\n",
-      "$VIAC: possibly delisted; no timezone found\n",
-      "$WCG: possibly delisted; no timezone found\n",
-      "$WFM: possibly delisted; no price data found  (1d 2012-01-01 00:00:00 -> 2021-01-01 00:00:00)\n",
-      "$WIN: possibly delisted; no timezone found\n",
-      "$WLTW: possibly delisted; no timezone found\n",
-      "$WPX: possibly delisted; no timezone found\n",
-      "$WRK: possibly delisted; no timezone found\n",
-      "$X: possibly delisted; no timezone found\n",
-      "$XEC: possibly delisted; no timezone found\n",
-      "$XLNX: possibly delisted; no timezone found\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of tickers successfully fetched: 525\n"
+      "$CB: possibly delisted; no price data found  (1d 2012-01-01 00:00:00 -> 2021-01-01 00:00:00)\n",
+      "Failed to get ticker 'CBE' reason: Failed to perform, curl: (28) Operation timed out after 165779 milliseconds with 0 bytes received. See https://curl.se/libcurl/c/libcurl-errors.html first for more details.\n",
+      "$CBE: possibly delisted; no timezone found\n",
+      "$CBOE: possibly delisted; no price data found  (1d 2012-01-01 00:00:00 -> 2021-01-01 00:00:00)\n"
      ]
     }
    ],
@@ -738,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "bd186f54",
    "metadata": {},
    "outputs": [
@@ -965,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "c4349702",
    "metadata": {},
    "outputs": [],
@@ -982,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "ec11da29",
    "metadata": {},
    "outputs": [
@@ -1325,7 +1215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "51cddeda",
    "metadata": {},
    "outputs": [
@@ -1580,7 +1470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "32cabc2c",
    "metadata": {},
    "outputs": [],
@@ -1592,7 +1482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "16e8f01a",
    "metadata": {},
    "outputs": [],
@@ -1604,7 +1494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "8774aa0a",
    "metadata": {},
    "outputs": [],
@@ -1622,7 +1512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "8a4b09db",
    "metadata": {},
    "outputs": [],
@@ -1644,7 +1534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "44548611",
    "metadata": {},
    "outputs": [],
@@ -1681,7 +1571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "d9878ee1",
    "metadata": {},
    "outputs": [
@@ -2066,7 +1956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "417774fb",
    "metadata": {},
    "outputs": [
@@ -2454,7 +2344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "d09fc96b",
    "metadata": {},
    "outputs": [
@@ -3149,7 +3039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "dcdf1840",
    "metadata": {},
    "outputs": [
@@ -3215,7 +3105,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -3229,7 +3119,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.14.0"
   }
  },
  "nbformat": 4,
