added membership index and stock renaming

--- a/Data prep and EDA/data_cleaning2.ipynb
+++ b/Data prep and EDA/data_cleaning2.ipynb
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "3c55986e",
    "metadata": {},
    "outputs": [
@@ -395,7 +395,7 @@
     }
    ],
    "source": [
-    "# Step 1: Split the tickers into lists\n",
+    "# Split the tickers into lists\n",
     "spy_stocklist_filtered_expanded_unexploded = (\n",
     "    spy_stocklist_filtered.assign(\n",
     "        ticker=spy_stocklist_filtered[\"tickers\"].str.split(\",\")\n",
@@ -404,7 +404,7 @@
     "    .reset_index(drop=True)\n",
     ")\n",
     "\n",
-    "# Step 2: Apply mapping to each list of tickers\n",
+    "# Apply mapping to each list of tickers\n",
     "updated_ticker_mapping = {\n",
     "    'GOOGL': 'GOOG',\n",
     "    'FB': 'META',\n",
@@ -417,7 +417,7 @@
     ")\n",
     "\n",
     "\n",
-    "# When exploding, you don’t need to drop \"tickers\" again—it was already dropped above\n",
+    "# Explode the lists into separate rows\n",
     "spy_stocklist_filtered_expanded = (\n",
     "    spy_stocklist_filtered_expanded_unexploded\n",
     "    .explode(\"ticker\")\n",
