added membership index and stock renaming

--- a/Data prep and EDA/data_cleaning2.ipynb
+++ b/Data prep and EDA/data_cleaning2.ipynb
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "475e2890",
    "metadata": {},
    "outputs": [
@@ -595,7 +595,7 @@
     "survivors_df.set_index('month', inplace=True)\n",
     "# Create full month range\n",
     "full_month_range = pd.date_range(start='2013-01-01', end='2020-12-31', freq='MS')\n",
-    "# Reindex to include all months (adds missing months)\n",
+    "# Reindex to include all months \n",
     "survivors_df = survivors_df.reindex(full_month_range)\n",
     "\n",
     "# Forward-fill missing months\n",
@@ -3414,7 +3414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "335a6c18",
    "metadata": {},
    "outputs": [
@@ -3626,8 +3626,6 @@
    "source": [
     "# combine all individual DataFrames into one big DataFrame\n",
     "yfinance_df = pd.concat(yfinance_data, ignore_index=True)\n",
-    "\n",
-    "# optional: ensure 'Date' is a proper datetime column\n",
     "yfinance_df[\"Date\"] = pd.to_datetime(yfinance_df[\"Date\"])\n",
     "\n",
     "# preview result\n",
@@ -3838,13 +3836,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "7929c60e",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Membership Indicator \n",
     "\n",
-    "# Create 'month' column as the first day of the month timestamp\n",
+    "# Create 'month' column \n",
     "yfinance_df['month'] = yfinance_df['Date'].dt.to_period('M').dt.to_timestamp()\n",
     "\n",
     "# Merge with survivors_df on 'month'\n",
@@ -3854,11 +3853,12 @@
     "    how='left'\n",
     ")\n",
     "\n",
-    "# Check if ticker is in ticker_list for that month, result is boolean (True/False)\n",
+    "# Check if ticker is in ticker_list for that month, 1 if yes, 0 if no\n",
     "merged_df['is_in_sp500'] = merged_df.apply(\n",
-    "    lambda row: row['ticker'] in row['ticker_list'] if isinstance(row['ticker_list'], (list, set)) else False,\n",
+    "    lambda row: int(row['ticker'] in row['ticker_list']) if isinstance(row['ticker_list'], (list, set)) else 0,\n",
     "    axis=1\n",
     ")\n",
+    "\n",
     "\n",
     "\n",
     "merged_df.drop(columns=['ticker_list', 'month'], inplace=True)\n"
