added membership index and stock renaming

--- a/Data prep and EDA/data_cleaning2.ipynb
+++ b/Data prep and EDA/data_cleaning2.ipynb
@@ -3836,7 +3836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "7929c60e",
    "metadata": {},
    "outputs": [],
@@ -3866,7 +3866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "74bcadb4",
    "metadata": {},
    "outputs": [
@@ -3915,7 +3915,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>TSLA</td>\n",
-       "      <td>False</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1129035</th>\n",
@@ -3928,7 +3928,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>TSLA</td>\n",
-       "      <td>False</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1129036</th>\n",
@@ -3941,7 +3941,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>TSLA</td>\n",
-       "      <td>False</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1129037</th>\n",
@@ -3954,7 +3954,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>TSLA</td>\n",
-       "      <td>True</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1129038</th>\n",
@@ -3967,7 +3967,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>TSLA</td>\n",
-       "      <td>True</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1129039</th>\n",
@@ -3980,7 +3980,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>TSLA</td>\n",
-       "      <td>True</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1129040</th>\n",
@@ -3993,7 +3993,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>TSLA</td>\n",
-       "      <td>True</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1129041</th>\n",
@@ -4006,7 +4006,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>TSLA</td>\n",
-       "      <td>True</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1129042</th>\n",
@@ -4019,7 +4019,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>TSLA</td>\n",
-       "      <td>True</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1129043</th>\n",
@@ -4032,7 +4032,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>TSLA</td>\n",
-       "      <td>True</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1129044</th>\n",
@@ -4045,7 +4045,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>TSLA</td>\n",
-       "      <td>True</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1129045</th>\n",
@@ -4058,7 +4058,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>TSLA</td>\n",
-       "      <td>True</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1129046</th>\n",
@@ -4071,7 +4071,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>TSLA</td>\n",
-       "      <td>True</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1129047</th>\n",
@@ -4084,7 +4084,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>TSLA</td>\n",
-       "      <td>True</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1129048</th>\n",
@@ -4097,7 +4097,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>TSLA</td>\n",
-       "      <td>True</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1129049</th>\n",
@@ -4110,7 +4110,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>TSLA</td>\n",
-       "      <td>True</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1129050</th>\n",
@@ -4123,7 +4123,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>TSLA</td>\n",
-       "      <td>True</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1129051</th>\n",
@@ -4136,7 +4136,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>TSLA</td>\n",
-       "      <td>True</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1129052</th>\n",
@@ -4149,7 +4149,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>TSLA</td>\n",
-       "      <td>True</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1129053</th>\n",
@@ -4162,7 +4162,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>TSLA</td>\n",
-       "      <td>True</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1129054</th>\n",
@@ -4175,7 +4175,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>TSLA</td>\n",
-       "      <td>True</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1129055</th>\n",
@@ -4188,7 +4188,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>TSLA</td>\n",
-       "      <td>True</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1129056</th>\n",
@@ -4201,7 +4201,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>TSLA</td>\n",
-       "      <td>True</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1129057</th>\n",
@@ -4214,7 +4214,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>TSLA</td>\n",
-       "      <td>True</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1129058</th>\n",
@@ -4227,7 +4227,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>TSLA</td>\n",
-       "      <td>True</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -4262,34 +4262,34 @@
        "1129058 2020-12-31  233.330002  239.573334  230.373337  235.223328  148949700   \n",
        "\n",
        "        Dividends  Stock Splits ticker  is_in_sp500  \n",
-       "1129034       0.0           0.0   TSLA        False  \n",
-       "1129035       0.0           0.0   TSLA        False  \n",
-       "1129036       0.0           0.0   TSLA        False  \n",
-       "1129037       0.0           0.0   TSLA         True  \n",
-       "1129038       0.0           0.0   TSLA         True  \n",
-       "1129039       0.0           0.0   TSLA         True  \n",
-       "1129040       0.0           0.0   TSLA         True  \n",
-       "1129041       0.0           0.0   TSLA         True  \n",
-       "1129042       0.0           0.0   TSLA         True  \n",
-       "1129043       0.0           0.0   TSLA         True  \n",
-       "1129044       0.0           0.0   TSLA         True  \n",
-       "1129045       0.0           0.0   TSLA         True  \n",
-       "1129046       0.0           0.0   TSLA         True  \n",
-       "1129047       0.0           0.0   TSLA         True  \n",
-       "1129048       0.0           0.0   TSLA         True  \n",
-       "1129049       0.0           0.0   TSLA         True  \n",
-       "1129050       0.0           0.0   TSLA         True  \n",
-       "1129051       0.0           0.0   TSLA         True  \n",
-       "1129052       0.0           0.0   TSLA         True  \n",
-       "1129053       0.0           0.0   TSLA         True  \n",
-       "1129054       0.0           0.0   TSLA         True  \n",
-       "1129055       0.0           0.0   TSLA         True  \n",
-       "1129056       0.0           0.0   TSLA         True  \n",
-       "1129057       0.0           0.0   TSLA         True  \n",
-       "1129058       0.0           0.0   TSLA         True  "
+       "1129034       0.0           0.0   TSLA            0  \n",
+       "1129035       0.0           0.0   TSLA            0  \n",
+       "1129036       0.0           0.0   TSLA            0  \n",
+       "1129037       0.0           0.0   TSLA            1  \n",
+       "1129038       0.0           0.0   TSLA            1  \n",
+       "1129039       0.0           0.0   TSLA            1  \n",
+       "1129040       0.0           0.0   TSLA            1  \n",
+       "1129041       0.0           0.0   TSLA            1  \n",
+       "1129042       0.0           0.0   TSLA            1  \n",
+       "1129043       0.0           0.0   TSLA            1  \n",
+       "1129044       0.0           0.0   TSLA            1  \n",
+       "1129045       0.0           0.0   TSLA            1  \n",
+       "1129046       0.0           0.0   TSLA            1  \n",
+       "1129047       0.0           0.0   TSLA            1  \n",
+       "1129048       0.0           0.0   TSLA            1  \n",
+       "1129049       0.0           0.0   TSLA            1  \n",
+       "1129050       0.0           0.0   TSLA            1  \n",
+       "1129051       0.0           0.0   TSLA            1  \n",
+       "1129052       0.0           0.0   TSLA            1  \n",
+       "1129053       0.0           0.0   TSLA            1  \n",
+       "1129054       0.0           0.0   TSLA            1  \n",
+       "1129055       0.0           0.0   TSLA            1  \n",
+       "1129056       0.0           0.0   TSLA            1  \n",
+       "1129057       0.0           0.0   TSLA            1  \n",
+       "1129058       0.0           0.0   TSLA            1  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
