new fixed data, changed lasso ridge filepath so it is relative to github

--- a/Models/Lasso Ridge EN.ipynb
+++ b/Models/Lasso Ridge EN.ipynb
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "3fb44845-158a-4b8c-a761-6595dc7bacec",
    "metadata": {},
    "outputs": [
@@ -386,8 +386,8 @@
    ],
    "source": [
     "try:\n",
-    "    train_full = pd.read_csv(\"csv/training_data.csv\", parse_dates=[\"Date\"])\n",
-    "    covid_test = pd.read_csv(\"csv/covid_stress_test_data.csv\", parse_dates=[\"Date\"])\n",
+    "    train_full = pd.read_csv(\"../Data prep and EDA/processed_data/training_data.csv\", parse_dates=[\"Date\"])\n",
+    "    covid_test = pd.read_csv(\"../Data prep and EDA/processed_data/covid_stress_test_data.csv\", parse_dates=[\"Date\"])\n",
     "except FileNotFoundError:\n",
     "    print(\"WARNING: Data files not found at expected relative paths. Using local stubs for demonstration.\")\n",
     "    train_full = pd.DataFrame(columns=[\"ticker\", \"Date\", TARGET_COL] + FEATURE_COLS)\n",
