editteede some comments

--- a/Data prep and EDA/data_cleaning.ipynb
+++ b/Data prep and EDA/data_cleaning.ipynb
@@ -5638,7 +5638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": null,
    "id": "815827ec",
    "metadata": {},
    "outputs": [
@@ -5722,21 +5722,21 @@
     }
    ],
    "source": [
-    "# 1) Volume\n",
+    "# Volume\n",
     "SP500_all_stock_data_final['volume_log'] = np.log1p(SP500_all_stock_data_final['Volume'])\n",
     "\n",
-    "# 2) Volatility/variance (from log returns), clipping to avoid log(0)\n",
+    "# Volatility/variance (from log returns), clipping to avoid log(0)\n",
     "eps = 1e-12\n",
     "SP500_all_stock_data_final['log_daily_vol_21']  = np.log(SP500_all_stock_data_final['daily_vol_21'].clip(lower=eps))\n",
     "SP500_all_stock_data_final['log_monthly_var_3'] = np.log(SP500_all_stock_data_final['monthly_var_3'].clip(lower=eps))\n",
     "\n",
-    "# 3) Prices & MAs → ratios (then drop raw) https://anderson-review.ucla.edu/wp-content/uploads/2021/03/Avramov-Kaplanski-Subra_2018_SSRN-id3111334.pdf?\n",
+    "# Prices & MAs → ratios (then drop raw) https://anderson-review.ucla.edu/wp-content/uploads/2021/03/Avramov-Kaplanski-Subra_2018_SSRN-id3111334.pdf?\n",
     "for span in [20, 50, 100]:\n",
     "    SP500_all_stock_data_final[f'close_sma_ratio_{span}'] = (SP500_all_stock_data_final['Close'] - SP500_all_stock_data_final[f'SMA_{span}']) / SP500_all_stock_data_final[f'SMA_{span}']\n",
     "    SP500_all_stock_data_final[f'close_ema_ratio_{span}'] = (SP500_all_stock_data_final['Close'] - SP500_all_stock_data_final[f'EMA_{span}'])/ SP500_all_stock_data_final[f'EMA_{span}']\n",
     "\n",
     "\n",
-    "# 4) MACD normalized by price\n",
+    "# MACD normalized by price\n",
     "SP500_all_stock_data_final['macd_line_pct']   = SP500_all_stock_data_final['MACD_Line']   / SP500_all_stock_data_final['Close']\n",
     "SP500_all_stock_data_final['macd_signal_pct'] = SP500_all_stock_data_final['MACD_Signal'] / SP500_all_stock_data_final['Close']\n",
     "SP500_all_stock_data_final['macd_hist_pct']   = SP500_all_stock_data_final['MACD_Hist']   / SP500_all_stock_data_final['Close']\n",
@@ -6044,18 +6044,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": null,
    "id": "827234d4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 7) Drop raw columns that cause skew / redundancy\n",
+    "#Drop raw columns that cause skew / redundancy\n",
     "to_drop = [\n",
-    "    'Open','High','Low','Close',\n",
-    "    'SMA_20','SMA_50','SMA_100','EMA_20','EMA_50','EMA_100',\n",
-    "    'Volume','daily_vol_21','monthly_var_3',\n",
-    "    'MACD_Line','MACD_Signal','MACD_Hist',\n",
-    "    'Stock Splits', 'monthly_log_return'\n",
+    "    'Open','High','Low','Close', # dropping raw prices them as calculated fields\n",
+    "    'SMA_20','SMA_50','SMA_100','EMA_20','EMA_50','EMA_100', # dropping raw moving averages we have them as pct\n",
+    "    'Volume','daily_vol_21','monthly_var_3', # changed to log versions \n",
+    "    'MACD_Line','MACD_Signal','MACD_Hist', # dropping raw MACD we have them as pct\n",
+    "    'Stock Splits', 'monthly_log_return'    # we shift monthly_log_return forward so drop current\n",
     "]\n",
     "SP500_all_stock_data_final = SP500_all_stock_data_final.drop(columns=[c for c in to_drop if c in SP500_all_stock_data_final.columns], errors='ignore')"
    ]
