changed filepath for cleaning and eda so that its relative

--- a/Data prep and EDA/data_cleaning.ipynb
+++ b/Data prep and EDA/data_cleaning.ipynb
@@ -9383,36 +9383,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": null,
    "id": "0e963b07",
    "metadata": {},
    "outputs": [],
    "source": [
     "training_data = training_data.replace([np.inf, -np.inf], np.nan).dropna()\n",
-    "training_data.to_csv(\"training_data.csv\", index=False)\n",
+    "training_data.to_csv(\"processed_data/training_data.csv\", index=False)\n",
+    "\n",
     "covid_stress_test_data = covid_stress_test_data.replace([np.inf, -np.inf], np.nan).dropna()\n",
-    "covid_stress_test_data.to_csv(\"covid_stress_test_data.csv\", index=False)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "id": "720ac7cd",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Timestamp('2020-02-20 00:00:00')"
-      ]
-     },
-     "execution_count": 54,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "min(covid_stress_test_data['Date'])"
+    "covid_stress_test_data.to_csv(\"processed_data/covid_stress_test_data.csv\", index=False)\n"
    ]
   }
  ],
