--- a/Models/benchmark_w_regularisation.ipynb
+++ b/Models/benchmark_w_regularisation.ipynb
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -695,7 +695,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(\"training_data.csv\", parse_dates=[\"Date\"])\n",
+    "df = pd.read_csv(\"../Data prep and EDA/processed_data/training_data.csv\", parse_dates=[\"Date\"])\n",
     "df[\"daily_simple_return\"] = np.expm1(df[\"daily_log_return\"])\n",
     "\n",
     "# Building my wide df\n",
@@ -1030,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1435,7 +1435,7 @@
     }
    ],
    "source": [
-    "stress_test = pd.read_csv(\"covid_stress_test_data.csv\",parse_dates=[\"Date\"])\n",
+    "stress_test = pd.read_csv(\"../Data prep and EDA/processed_data/covid_stress_test_data.csv\", parse_dates=[\"Date\"])\n",
     "stress_test[\"daily_simple_return\"] = np.expm1(stress_test[\"daily_log_return\"])\n",
     "stress_test"
    ]
@@ -2507,7 +2507,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "myenv (3.12.1)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -2521,7 +2521,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.14.0"
   }
  },
  "nbformat": 4,
